# EppoChat

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg.json
EppoChat/Source/: AppLayer.cpp  EppoChat.cpp
EppoChatClient/: CMakeLists.txt  imgui.ini
EppoChatClient/Source/: AppLayer.cpp  AppLayer.h  EppoChatClient.cpp
EppoChatCommon/Source/EppoChatCommon/: Client.h  DataPacket.h
EppoChatServer/: CMakeLists.txt
EppoChatServer/Source/: AppLayer.cpp  AppLayer.h  EppoChatServer.cpp
